deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conner-backend
  namespace: conner
  labels:
    app: conner-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conner-backend
  template:
    metadata:
      labels:
        app: conner-backend
    spec:
      containers:
        - name: conner-backend
          image: ghcr.io/motung-i/motung-backend:latest
           ports:
            - name: http
              containerPort: 8080
            - name: monitoring
              containerPort: 8081
          resources:
            limits:
              cpu: 200m
              memory: 2024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
